<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/name_description_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/topping"
            style="@style/Titles"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/topping_whipped_cream_checkbox"
            style="@style/CheckBox"
            android:onClick="onCheckboxClicked"
            android:text="@string/whipped_cream" />

        <CheckBox
            android:id="@+id/topping_chocolate_checkbox"
            style="@style/CheckBox"
            android:onClick="onCheckboxClicked"
            android:text="@string/chocolate" />

        <TextView
            android:id="@+id/quantity"
            style="@style/Titles"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrementCups"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/increment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="incrementCups"
                android:text="+" />

        </LinearLayout>

        <TextView
            android:id="@+id/price"
            style="@style/Titles"
            android:text="@string/order_summary" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="$0"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/order" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>